# BevDet_TensorRT

./: CMakeLists.txt  README.md  convert_engine.sh  main.cc
base/: blob.cc  blob.h  camera_frame.h  data_provider.cc  data_provider.h  distortion_model.cc  distortion_model.h  eigen_defs.h  image_8u.h  macros_common.h  sensor_param.cc  sensor_param.h
bevdet/: bev_part1.cc  bev_part1.h  bev_part2.cc  bev_part2.h  nuscenes_box.cc  nuscenes_box.h  rt_engine.cc  rt_engine.h  utils.h  view_transformer.cc  view_transformer.h
bevdet/utils/: resize.cu  resize.h
common/: common.h  engine_log.h  file.cc  file.h  math.h  npy.h  syncedmem.cc  syncedmem.h
data/: bevdet.pt  camera_params.json  dep.npy  depth_digit.npy  dim_0.npy  dim_1.npy  dim_2.npy  dim_3.npy  dim_4.npy  dim_5.npy  fea.npy  heatmap_0.npy  heatmap_1.npy  heatmap_2.npy  heatmap_3.npy  heatmap_4.npy  heatmap_5.npy  height_0.npy  height_1.npy  height_2.npy  height_3.npy  height_4.npy  height_5.npy  inputs.npy  out.npy  params.json  reg_0.npy  reg_1.npy  reg_2.npy  reg_3.npy  reg_4.npy  reg_5.npy  rot_0.npy  rot_1.npy  rot_2.npy  rot_3.npy  rot_4.npy  rot_5.npy
proto/: bevdet.pb.cc  bevdet.pb.h  bevdet.proto
